@@ -1,81 +1,63 @@
-package view;/*
+package ViewControl;
+/*
  *  constructs a prototype Lane View
  *
  */
 
-import entity.Bowler;
-import entity.Lane;
-import entity.Party;
-import observer.GameObserver;
-
-import javax.swing.*;
 import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.awt.event.WindowAdapter;
-import java.awt.event.WindowEvent;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.Vector;
+import java.awt.event.*;
+import javax.swing.*;
 
-public class LaneView implements GameObserver, ActionListener {
+import Model.Bowler;
+import Model.Lane;
+import Model.Party;
 
-	private int roll;
-	private boolean initDone;
+import java.util.*;
 
+public class LaneView implements ActionListener, Observer {
+
+	private boolean initDone = false;
 	JFrame frame;
 	Container cpanel;
 	Vector bowlers;
 	int cur;
 	Iterator bowlIt;
-
 	JPanel[][] balls;
 	JLabel[][] ballLabel;
 	JPanel[][] scores;
 	JLabel[][] scoreLabel;
 	JPanel[][] ballGrid;
 	JPanel[] pins;
-
 	JButton maintenance;
 	Lane lane;
 
 	public LaneView(Lane lane, int laneNum) {
 
 		this.lane = lane;
-
-		initDone = true;
 		frame = new JFrame("Lane " + laneNum + ":");
 		cpanel = frame.getContentPane();
 		cpanel.setLayout(new BorderLayout());
-
 		frame.addWindowListener(new WindowAdapter() {
 			public void windowClosing(WindowEvent e) {
-				frame.setVisible(false);
+				frame.hide();
 			}
 		});
-
 		cpanel.add(new JPanel());
-
 	}
 
 	public void show() {
-		frame.setVisible(true);
+		frame.show();
 	}
 
 	public void hide() {
-		frame.setVisible(false);
+		frame.hide();
 	}
 
 	private JPanel makeFrame(Party party) {
-
-		initDone = false;
 		bowlers = party.getMembers();
 		int numBowlers = bowlers.size();
-
 		JPanel panel = new JPanel();
-
 		panel.setLayout(new GridLayout(0, 1));
-
 		balls = new JPanel[numBowlers][23];
 		ballLabel = new JLabel[numBowlers][23];
 		scores = new JPanel[numBowlers][10];
@@ -88,7 +70,7 @@ public class LaneView implements GameObserver, ActionListener {
 				ballLabel[i][j] = new JLabel(" ");
 				balls[i][j] = new JPanel();
 				balls[i][j].setBorder(
-					BorderFactory.createLineBorder(Color.BLACK));
+						BorderFactory.createLineBorder(Color.BLACK));
 				balls[i][j].add(ballLabel[i][j]);
 			}
 		}
@@ -112,14 +94,14 @@ public class LaneView implements GameObserver, ActionListener {
 		for (int i = 0; i != numBowlers; i++) {
 			pins[i] = new JPanel();
 			pins[i].setBorder(
-				BorderFactory.createTitledBorder(
-					((Bowler) bowlers.get(i)).getNick()));
+					BorderFactory.createTitledBorder(
+							((Bowler) bowlers.get(i)).getNick()));
 			pins[i].setLayout(new GridLayout(0, 10));
 			for (int k = 0; k != 10; k++) {
 				scores[i][k] = new JPanel();
 				scoreLabel[i][k] = new JLabel("  ", SwingConstants.CENTER);
 				scores[i][k].setBorder(
-					BorderFactory.createLineBorder(Color.BLACK));
+						BorderFactory.createLineBorder(Color.BLACK));
 				scores[i][k].setLayout(new GridLayout(0, 1));
 				scores[i][k].add(ballGrid[i][k], BorderLayout.EAST);
 				scores[i][k].add(scoreLabel[i][k], BorderLayout.SOUTH);
@@ -132,24 +114,32 @@ public class LaneView implements GameObserver, ActionListener {
 		return panel;
 	}
 
-	public void receiveGameEvent(Party p, int bI, Bowler cT, int[][] cS, HashMap scores, int frameNum, int[] curScores, int ball) {
-		if (lane.getGame().getParty() != null) {
-			int numBowlers = p.getMembers().size();
-			while (!initDone) {
-				//System.out.println("chillin' here.");
-				try {
-					Thread.sleep(1);
-				} catch (Exception e) {
-				}
-			}
+	public void actionPerformed(ActionEvent e) {
+		if (e.getSource().equals(maintenance)) {
+			lane.pauseGame();
+		}
+	}
 
-			if (frameNum == 1
-				&& ball == 0
-				&& bI == 0) {
+	@Override
+	public void update(Observable o, Object arg) {		
+		if(!(o instanceof Lane)){
+			return;
+		}
+		Lane le = (Lane)o;
+
+		if (lane.isPartyAssigned() && !lane.isGameFinished()) {
+			
+			if(!initDone){
+				cpanel.removeAll();
+				cpanel.add(makeFrame(le.getParty()), "Center");
+			}
+			
+			int numBowlers = le.getParty().getMembers().size();
+		
+			if (le.getFrameNumber() == 0 && le.getBall() == 0 && le.getBowlIndex() == 0) {
 				System.out.println("Making the frame.");
 				cpanel.removeAll();
-				cpanel.add(makeFrame(p), "Center");
-
+				cpanel.add(makeFrame(le.getParty()), "Center");
 				// Button Panel
 				JPanel buttonPanel = new JPanel();
 				buttonPanel.setLayout(new FlowLayout());
@@ -167,52 +157,38 @@ public class LaneView implements GameObserver, ActionListener {
 				cpanel.add(buttonPanel, "South");
 
 				frame.pack();
-
+				cpanel.setVisible(true);
 			}
-
-			int[][] lescores = cS;
+			
+			int[][] lescores = le.getCumulScores();
+			HashMap scores = le.getScores();
+			this.bowlers = le.getParty().getMembers();
 			for (int k = 0; k < numBowlers; k++) {
-				for (int i = 0; i <= frameNum - 1; i++) {
-					if (lescores[k][i] != 0)
-						scoreLabel[k][i].setText(
-							(Integer.valueOf(lescores[k][i])).toString());
+				for (int i = 0; i <= le.getFrameNumber() - 1; i++) {
+					if (lescores[k][i] != 0){
+						this.scoreLabel[k][i].setText((new Integer(lescores[k][i])).toString());
+					}
 				}
 				for (int i = 0; i < 21; i++) {
-					if (((int[]) ((HashMap) scores)
-						.get(bowlers.get(k)))[i]
-						!= -1)
-						if (((int[]) ((HashMap) scores)
-							.get(bowlers.get(k)))[i]
-							== 10
-							&& (i % 2 == 0 || i == 19))
+					if (((int[]) (scores.get(bowlers.get(k))))[i] != -1){
+						if (((int[]) scores.get(bowlers.get(k)))[i] == 10 && (i % 2 == 0 || i == 19)){
 							ballLabel[k][i].setText("X");
-						else if (
-							i > 0
-								&& ((int[]) ((HashMap) scores)
-									.get(bowlers.get(k)))[i]
-									+ ((int[]) ((HashMap) scores)
-										.get(bowlers.get(k)))[i
-									- 1]
-									== 10
-								&& i % 2 == 1)
+						}					
+						else if (i > 0 && ((int[]) scores.get(bowlers.get(k)))[i] + ((int[]) scores.get(bowlers.get(k)))[i - 1] == 10 && i % 2 == 1){
 							ballLabel[k][i].setText("/");
-						else if ( ((int[])((HashMap) scores).get(bowlers.get(k)))[i] == -2 ){
-							
+						}
+						else if ( ((int[])scores.get(bowlers.get(k)))[i] == -2 ){
 							ballLabel[k][i].setText("F");
-						} else
-							ballLabel[k][i].setText(
-								(new Integer(((int[]) ((HashMap) scores)
-									.get(bowlers.get(k)))[i]))
-									.toString());
+						} 
+						else{
+							ballLabel[k][i].setText((new Integer(((int[]) scores.get(bowlers.get(k)))[i])).toString());
+						}
+					}
 				}
 			}
-
 		}
-	}
-
-	public void actionPerformed(ActionEvent e) {
-		if (e.getSource().equals(maintenance)) {
-			lane.maintenanceCall();
+		else{
+			initDone = false;
 		}
 	}
 }
